--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -4,17 +4,37 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-<form action="{:url('loginDoWith')}" method="post">
-    <p>
-        username:
-        <input type="text" name="username">
-    </p>
-    <p>
-        username:
-        <input type="password" name="password">
-    </p>
-    <input type="submit" value="登录">
-</form>
+<body class="body-bg">
+
+<!-- ================= Header start ================= -->
+
+<header id="">
+    {include file="public/header"}
+</header>
+
+
+<!-- ----------------- Header end ------------------- -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="reg-login-box text-center">
+                <form action="{:url('loginDoWith')}" method="post" class="form-group">
+                    <p>
+                        <label for="" class="col-form-label">帐号:</label>
+                        <input type="text" name="username" class="form-control">
+                    </p>
+                    <p>
+                        密码:
+                        <input type="password" name="password" class="form-control">
+                    </p>
+                    <input type="submit" value="登录" class="btn btn-success">
+                </form>
+            </div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
 </body>
 </html>
