2019-09-17新增如下内容： 1:添加密码修改功能 2:添加修改密码的api接口 3:添加头像上传功能 4：添加个人中心页面 5：还有一些修修补补的功能，我忘了是什么了。。。

--- a/application/index/view/homework/add_homework.html
+++ b/application/index/view/homework/add_homework.html
@@ -25,8 +25,16 @@
             <input type="text" name="title" class="form-control">
         </p>
         <p>
+            course: <br>
+            <input name="course" cols="20" rows="5" class="form-control"/>
+        </p>
+        <p>
             content: <br>
             <textarea name="content" cols="20" rows="5" class="form-control"></textarea>
+        </p>
+        <p>
+            deadtime: <br>
+            <input name="deadtime" cols="20" rows="5" class="form-control"/>
         </p>
         <p>
             remind_date:
