--- a/application/index/view/homework/query_done_homework.html
+++ b/application/index/view/homework/query_done_homework.html
@@ -28,10 +28,19 @@
         <th>TAG</th>
         <th>REMIND_DATE</th>
         <th>REMIND_TIME</th>
+        <th>设为未做</th>
         <th>编辑</th>
         <th>删除</th>
 
     </tr>
+
+    {php}
+    $t_user_id = Session::get("t_user_id");
+
+
+    {/php}
+
+
 
     {volist name="data" id="homework"}
     <tr>
@@ -43,6 +52,12 @@
         <td>{$homework.tag}</td>
         <td>{$homework.remind_date}</td>
         <td>{$homework.remind_time}</td>
+
+        <td>
+            <a href="/index.php/index/homework/api_setUndoHomework?t_user_id={$t_user_id}&t_hid={$homework.id}" class="btn btn-success">设为未做</a>
+            <!--<a href="/home.php/home/homework/edit?id=$homework.id}">编辑</a>-->
+        </td>
+
         <td>
             <a href="/index.php/index/homework/editHomework?id={$homework.id}">编辑</a>
             <!--<a href="/home.php/home/homework/edit?id=$homework.id}">编辑</a>-->
