--- a/application/index/view/user/edit_user_info.html
+++ b/application/index/view/user/edit_user_info.html
@@ -16,7 +16,7 @@
 <!-- ----------------- Header end ------------------- -->
 
 
-<form action="/index.php/index/user/editUserInfoDoWith?id={$data.id}" method="get">
+<form action="/index.php/index/user/api_editUserInfoDoWith?id={$data.id}" method="get">
 
 
     <div class="form-group">
@@ -61,7 +61,7 @@
     <div class="form-group">
         <input type="submit" value="修改" class="btn btn-success">
         <input type="reset" value="重置" class="btn btn-danger">
-        <a href="{:url('/index/user')}">返回用户首页</a>
+        <a href="{:url('/index/user/index')}">返回</a>
     </div>
 
 </form>
